Implement new methods in the SPI - filterColumns